# manimgl

./: .gitignore  pyproject.toml
manimlib/: __init__.py  config.py  constants.py  default_config.yml
manimlib/camera/: camera.py
manimlib/mobject/: coordinate_systems.py  frame.py
manimlib/mobject/svg/: brace.py
manimlib/utils/: shaders.py  tex_file_writing.py
