[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manimlib"
version = "1.7.2"
description = "Animation engine for explanatory math videos"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Grant Sanderson", email = "grant@3blue1brown.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "addict",
    "appdirs",
    "colour",
    "diskcache",
    "fontTools",
    "ipython>=8.18.0",
    "isosurfaces",
    "manimpango>=0.6.0",
    "mapbox-earcut",
    "matplotlib",
    "moderngl",
    "moderngl_window",
    "numpy",
    "Pillow",
    "pydub",
    "pygments",
    "PyOpenGL",
    "pyperclip",
    "pyyaml",
    "rich",
    "scipy",
    "screeninfo",
    "setuptools>=75.8.0",
    "skia-pathops",
    "svgelements>=1.8.1",
    "sympy",
    "tqdm",
    "typing-extensions; python_version < \"3.11\"",
    "validators",
]

[project.scripts]
manim-render = "manimlib.__main__:main"
manimgl = "manimlib.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/3b1b/manim/issues"
Documentation = "https://3b1b.github.io/manim/"
"Source Code" = "https://github.com/3b1b/manim"

[tool.hatch.build.targets.sdist]
include = [
    "/manimlib",
]
